fix: on mobile hero images touches each other

--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -91,6 +91,12 @@
   height: 19rem;
 }
 
+@media (max-width: 48em) {
+  .heroImageContainer {
+    grid-gap: 0.5rem;
+  }
+}
+
 .heroImage {
   max-height: 15rem;
   display: block;
